tests/fail_invariant_covariant.stderr
error[E0308]: mismatched types
 --> $DIR/fail_invariant_covariant.rs:7:9
  |
7 |         Invariant::<Lifetime<'static>>::default(),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
  |
  = note: expected struct `type_variance::Invariant<common::Lifetime<'a>>`
             found struct `type_variance::Invariant<common::Lifetime<'static>>`
note: the lifetime `'a` as defined on the function body at 5:29...
 --> $DIR/fail_invariant_covariant.rs:5:29
  |
5 | fn invariant_fail_covariant<'a>() {
  |                             ^^
  = note: ...does not necessarily outlive the static lifetime
